Prevent text from wrapping

--- a/src/styles/_editorTabs.scss
+++ b/src/styles/_editorTabs.scss
@@ -17,6 +17,7 @@
   // !important is necessary to override the default Card background-color property.
   background-color: $cadet-color-2 !important;
   user-select: none;
+  white-space: nowrap;
 
   &.selected {
     // !important is necessary to override the default Card background-color property.
